--- a/school_management/views/school_menus.xml
+++ b/school_management/views/school_menus.xml
@@ -9,23 +9,23 @@
         id="student_information"
         name="Students Information"
         parent="school_menu"
-        action="school.student_information_action" />
+        action="school_management.student_information_action" />
     <menuitem
         id="parent_information"
         name="Parents Information"
         parent="school_menu"
-        action="school.parent_information_action" />
+        action="school_management.parent_information_action" />
     <menuitem
         id="school_information"
         name="School Information"
         parent="school_menu"
-        action="school.school_information_action" />
+        action="school_management.school_information_action" />
         
     <menuitem
         id="teacher_information"
         name="Teacher Information"
         parent="school_menu"
-        action="school.teacher_information_action" />
+        action="school_management.teacher_information_action" />
         
     <menuitem
         id="school_classes"
@@ -36,17 +36,17 @@
         id="school_standards"
         name="Standards"
         parent="school_classes"
-        action="school.school_standard_action" />
+        action="school_management.school_standard_action" />
     <menuitem
         id="school_divisions"
         name="Division"
         parent="school_classes"
-        action="school.school_division_action" />
+        action="school_management.school_division_action" />
     <menuitem
         id="school_classesname"
         name="Class"
         parent="school_classes"
-        action="school.school_classes_action" />
+        action="school_management.school_classes_action" />
 
     <menuitem  
         id="school_higher_secondary"
