--- a/school_management/views/student_information.xml
+++ b/school_management/views/student_information.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    
     <record id="student_information_tree" model="ir.ui.view">
         <field name="name">student.information.tree</field>
         <field name="model">student.information</field>
         <field name="arch" type="xml">
-            <tree string="Student Information">
+            <tree decoration-info="is_good == True" 
+                decoration-danger="is_good == False"
+                string="Student Information">
                 <field name="enroll_number" />
                 <field name="class_name" />
                 <field name="assigned_teacher" />
                 <field name="phone_number" />
+                <field name="is_good" />
+                <button name="test_button" string="Testttt" type="object" class="oe_highlight"/>
             </tree>
         </field>
     </record>
-    
     <record id="student_information_search" model="ir.ui.view">
         <field name="name">student.information.search</field>
         <field name="model">student.information</field>
@@ -26,42 +30,62 @@
             </search>
         </field>
     </record>
-
+    <!-- <record id="action_student_button" model="ir.actions.act_url">
+        <field name="name">Open Google</field>
+        <field name="url">https://www.google.com</field>
+        <field name="target">self</field>
+    </record> -->
+    <record id="action_student" model="ir.actions.server">
+        <field name="name">Mark Is Good</field>
+        <field name="state">code</field>
+        <field name="model_id" ref="model_student_information" />
+        <field name="code">
+            for rec in records:
+                rec.action_done()
+                if rec.assigned_teacher:
+                    action = {
+                        "type": "ir.actions.act_window",
+                        "view_mode": "tree",
+                        "res_model": "teacher.information",
+                        "target" : "new"
+                    }
+        </field>
+    </record>
     <record id="student_information_form" model="ir.ui.view">
         <field name="name">student.information.name</field>
         <field name="model">student.information</field>
         <field name="arch" type="xml">
             <form string="Student Information">
-            
+                <button name="test_button_2" id="test_button_2" type="object" string="Testing"/>
+                <!-- <button name="%(student_information)daction_student_button" id="test1_button" type="action" string="Testing1" class="oe_highlight"/> -->
                 <sheet>
-                    
-                            <h1>
-                            <group>
-                                <field name="enroll_number" />
-                            </group>
-                            </h1>
-                            <br></br>
-                            <br></br>
-                            <group>
-                                <group>
-                                    <field name="name" />
-                                    <field name="standard" />
-                                    <field name="division" domain="[('std', '=', standard)]"/>
-                                    <field name="class_name" readonly="1" force_save="1" />
-                                    <field name="roll_number" />
-                                    <field name="phone_number"/>
-                                </group>
-                                <group>
-                                    <field name="country_name" />
-                                    <field name="state" />
-                                    <field name="address_line_1" />
-                                    <field name="address_line_2" />
-                                    <field name="zip_code" />
-                                    <field name="address" readonly="1"/>
-                                </group>
-                                
-                            </group>
-                        <notebook>
+                    <h1>
+                        <group>
+                            <field name="enroll_number" />
+                        </group>
+                    </h1>
+                    <br></br>
+                    <br></br>
+                    <group>
+                        <group>
+                            <field name="is_good" />
+                            <field name="name"/>
+                            <field name="standard" />
+                            <field name="division" domain="[('std', '=', standard)]"/>
+                            <field name="class_name" readonly="1" force_save="1" />
+                            <field name="roll_number" />
+                            <field name="phone_number"/>
+                        </group>
+                        <group>
+                            <field name="country_name" />
+                            <field name="state" />
+                            <field name="address_line_1" />
+                            <field name="address_line_2" />
+                            <field name="zip_code" />
+                            <field name="address" readonly="1"/>
+                        </group>
+                    </group>
+                    <notebook>
                         <page string="Info">
                             <group>
                                 <field name="assigned_teacher" />
@@ -94,11 +118,11 @@
             </form>
         </field>
     </record>
-
     <record id="student_information_action" model="ir.actions.act_window">
         <field name="name">Students</field>
         <field name="res_model">student.information</field>
         <field name="view_mode">tree,form</field>
         <field name="context">{'search_default_10':1}</field>
+        <field name="target">current</field>
     </record>
 </odoo>
