--- a/school_management/views/school_menus.xml
+++ b/school_management/views/school_menus.xml
@@ -1,30 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
- <record id="test_form" model="ir.ui.view">
-        <field name="name">test.model.form</field>
-        <field name="model">test.model</field>
-        <field name="arch" type="xml">
-            <form string="Previous School Information">
-                <group>
-                    <group>
-                        <field name="name" />
-                        <field name="standard" />
-                        <field name="division" />
-                        <field name="class_name" />
-                        <field name="dob" />
-                        <field name="country_name" />
-                        <field name="phone_number" />
-                        <field name="enroll_number" />
-                    </group>
-                </group>
-            </form>
-        </field>
-    </record>
-    <record id="test_action" model="ir.actions.act_window">
-        <field name="name">Test</field>
-        <field name="res_model">test.model</field>
-        <field name="target">current</field>
-    </record>
     <menuitem
         id="school_menu"
         name="School Management"
@@ -88,10 +63,11 @@
         name="Arts"
         parent="school_higher_secondary" 
         action="arts_action" />
+        
     <menuitem
-        id="test"
-        name="Test"
+        id="cancel_wizard_menu"
+        name="Cancel Wizard Data"
         parent="school_menu"
-        action="test_action"
+        action="cancel_action"
         />
 </odoo>
