--- a/estate/views/estate_property_offer_views.xml
+++ b/estate/views/estate_property_offer_views.xml
@@ -26,7 +26,7 @@
                 <group>
                     <group>
                         <field name="partner_id" />
-                        <field name="property_id" />
+                        <field name="property_id" context="{'get_properties': True}"/>
                         <field name="price" />
                         <field name="status" />
                         <field name="salesperson_id" />
