--- a/estate/views/estate_property_views.xml
+++ b/estate/views/estate_property_views.xml
@@ -8,7 +8,8 @@
                 <button name="cancel_property_context" class="btn btn-sm btn-secondary" string="View More" type="object"/>
                 <field name="handle" widget="handle"/>
                 <field name="name"/>
-                <field name="property_info_id" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
+                <field name="salesperson_id"  widget="many2one_avatar_user"/>
+                <field name="buyer_id"  widget="many2one_avatar_user"/>
                 <field name="expected_price" />
                 <field name="date_availabilty" />
                 <field name="check_box_value" widget="progressbar"/>
@@ -129,6 +130,15 @@
         <field name="arch" type="xml">
             <form string="Property Information">
                 <sheet>
+                    <div class="oe_button_box">
+                        <button name="action_show_potential_duplicates" type="object" class="oe_stat_button" icon="fa-star" attrs="{'invisible': [('duplicate_buyer_count', '&lt;', 1)]}">
+                            <div class="o_stat_info">
+                                <field name="duplicate_buyer_count" class="o_stat_value"/>
+                                <span class="o_stat_text" attrs="{'invisible': [('duplicate_buyer_count', '&lt;', 2)]}">Similar Buyers</span>
+                                <span class="o_stat_text" attrs="{'invisible': [('duplicate_buyer_count', '&gt;', 1)]}">Similar Buyer</span>
+                            </div>
+                        </button>
+                    </div>
                     <field name="new_field" />
                     <h1>
                         <field name="name" placeholder="Enter Title" />
@@ -136,7 +146,7 @@
                     <group>
                         <field name="ratings" widget="priority"/>
                     </group>
-                    <field name="property_info_id" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
+                    <field name="property_info_id" context="{'from_view': True}" widget="many2many_tags" options="{'color_field': 'color', 'no_create_edit': True}"/>
                     <field name="sale" />
                     <group>
                         <group>
@@ -144,9 +154,9 @@
                                 <field name="user" />
                                 <field name="price"/>
                                 <field name="currency_id"/>
-                                <field name="property_type_id" context="{'property': True}"/>
-                                <field string="Test New Field" name="new_id" context="{'field' : True}"/>
-                                <field name="postcode" />
+                                <field name="property_type_id" />
+                                <field name="new_id" string="Test New Field" context="{'field' : True}" />
+                                <field name="postcode" groups="account.group_account_manager"/>
                                 <field name="date_availabilty" />
                                 <field name="month_availabilty" />
                             </group>
@@ -219,7 +229,7 @@
                         <page name="Other Info">
                             <group>
                                 <group>
-                                    <field name="buyer_id"/>
+                                    <field name="buyer_id" widget="many2one_avatar_user"/>
                                     <field name="salesperson_id" widget="many2one_avatar_user"/>
                                 </group>
                             </group>
@@ -229,11 +239,22 @@
             </form>
         </field>
     </record>
+    <record id="action_change_" model="ir.actions.server">
+        <field name="name">Change Field</field>
+        <field name="state">code</field>
+        <field name="model_id" ref="model_estate_property" />
+        <field name="binding_model_id" ref="model_estate_property" />
+        <field name="code">
+            for rec in records:
+                rec.action_change()
+        </field>
+    </record>
     <record id="estate_property_action" model="ir.actions.act_window">
         <field name="name">Property</field>
         <field name="res_model">estate.property</field>
         <field name="view_mode">tree,kanban,graph,pivot,form</field>
         <field name="context">{'default_selling_price' : 10000.00}</field>
+        <field name="domain">[('salesperson_id', '=', context.get('uid'))]</field>
     </record>
     <record id="estate_property_kanban_action" model="ir.actions.act_window.view">
         <field name="sequence" eval="1" />
