--- a/estate/views/estate_property_offer_views.xml
+++ b/estate/views/estate_property_offer_views.xml
@@ -4,7 +4,6 @@
         <field name="name">Offers</field>
         <field name="res_model">estate.property.offer</field>
     </record>
-
     <record id="estate_property_offer_tree" model="ir.ui.view">
         <field name="name">estate.property.offer.tree</field>
         <field name="model">estate.property.offer</field>
@@ -17,21 +16,30 @@
             </tree>
         </field>
     </record>
-
     <record id="estate_property_offer_form" model="ir.ui.view">
         <field name="name">estate.property.offer.form</field>
         <field name="model">estate.property.offer</field>
         <field name="arch" type="xml">
             <form string="Property Offers">
-                <group>
+                <button name="action_send_info" type="object" string="Send by Email" class="oe_highlight" />
+                <sheet>
                     <group>
-                        <field name="partner_id" />
-                        <field name="property_id" context="{'get_properties': True}"/>
-                        <field name="price" />
-                        <field name="status" />
-                        <field name="salesperson_id" />
+                        <group>
+                            <field name="partner_id" />
+                            <field name="property_id" context="{'get_properties': True}"/>
+                            <field name="price" />
+                            <field name="status" />
+                            <field name="salesperson_id" />
+                        </group>
+                        <group>
+                            <group>
+                                
+                                    <field name="salesperson_img" widget="image"/>
+                                
+                            </group>
+                        </group>
                     </group>
-                </group>
+                </sheet>
             </form>
         </field>
     </record>
